Relax rootchecker